--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<span id="close">X</span>
 		</div>
 		<div id="imageDiv">
-		    <img id ="image" src="img/otter.jpg" title="Otter" alt="Otter">
+		    <img id ="image" src="img/otter.JPG" title="Otter" alt="Otter">
 		</div>      		
 	</body>
 
