This is a test commit

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+	
 	<head>
 		<meta charset="utf-8">
 	  	<meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -13,7 +13,7 @@
 
 	<body>  
 		<div id="reminder">
-			<span id="message">Please make sure your device is in landscape mode</span>
+			<span id="message">Please make sure your device is in landscape display mode</span>
 			<span id="close">X</span>
 		</div>
 		<div id="imageDiv">
